Updated models, added jwt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 alembic==1.6.5
 aniso8601==7.0.0
 appdirs==1.4.4
-asgiref==3.3.4
+asgiref==3.4.1
+bcrypt==3.2.0
 black==21.6b0
 certifi==2021.5.30
+cffi==1.14.5
 click==8.0.1
 colorama==0.4.4
+cryptography==3.4.7
 distlib==0.3.2
-fastapi==0.65.2
+fastapi==0.66.0
 FastAPI-SQLAlchemy==0.2.1
 filelock==3.0.12
-graphene==2.1.9
+graphene==2.1.8
 graphene-sqlalchemy==2.3.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
@@ -24,15 +27,17 @@ pathspec==0.8.1
 pipenv==2021.5.29
 promise==2.3
 psycopg2-binary==2.9.1
+pycparser==2.20
 pydantic==1.8.2
+PyJWT==2.1.0
 python-dateutil==2.8.1
 python-dotenv==0.18.0
 python-editor==1.0.4
-regex==2021.4.4
+regex==2021.7.1
 Rx==1.6.1
 singledispatch==3.6.2
 six==1.16.0
-SQLAlchemy==1.4.19
+SQLAlchemy==1.4.20
 starlette==0.14.2
 toml==0.10.2
 typed-ast==1.4.3
